--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700,900|Roboto+Mono:300,400,500" />
     <link rel="stylesheet" href="fonts/icomoon/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Bentham|Playfair+Display|Raleway:400,500|Suranna|Trocchi" rel="stylesheet">
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/owl.carousel.min.css" />
   <link rel="stylesheet" href="css/owl.theme.default.min.css" />
@@ -24,10 +25,12 @@
   <link rel="stylesheet" href="css/indexmerge.css"/>   -->
   <link rel="icon" type="image/png" href="images/icon.png" />
   <link rel="stylesheet" href="css/pricing.css" />
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
 
   <style>
   .theme{
-    background:url('images/theme.jpg') 50% 100px no-repeat fixed;
+    /* background:url('images/theme1min.png') 50% 100px no-repeat fixed; */
+
     height: 100%;
     margin-top:0px;
     background-size: cover;
@@ -78,13 +81,13 @@
       <!-- .site-mobile-menu -->
 
      <div class="site-navbar-wrap bg-white" id="sticky">
-       <div class="container" style="padding-right:0;">
+       <div class="container" style="padding-right:0px; ">
          <div class="site-navbar bg-light">
-           <div class="py-1" style="background-color:white;">
+           <div class="py-1" style="background-color:white;height: 73.33px;">
              <div class="row align-items-center">
                <div class="col-2">
                  <h2 class="mb-0 site-logo">
-                   <a href="index.html"><img class="logo" src="Logos/White linear.png"/></a>
+                   <a href="index.html"><img class="logo" style="width: 330px;" src="Logos/White linear.png"/></a>
                  </h2>
                </div>
                <div class="col-10">
@@ -104,7 +107,7 @@
                    <!--  <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>-->
                    <div class="dropdown" id="Gallery">
                    <li style="list-style: none;">
-                     <a id="kala" class="galry" href="#">Gallery</a></li>
+                     <a id="kala" class="galry" href="#">Gallery&nbsp<i class="fas fa-chevron-down"></i></a></li>
                      <div class="dropdown-content">
                        <a href="gallery.html">Photos</a>
                        <a href="videos.html">Videos</a>
@@ -120,6 +123,11 @@
                        <li><a href="index.html#sch">Schedule</a></li>
                      <li><a href="index.html#spk">Speakers</a></li> -->
                    <!--    <li><a href="#foo">Contact</a></li>-->
+
+
+
+
+
                      </ul>
                    </div>
                  </nav>
@@ -127,13 +135,59 @@
              </div>
            </div>
          </div>
+
        </div>
 
      </div>
 
-      <div
+<div class="dodabba">
+<div class="dabbaek">
+  <div class="dabbaekek">
+  <div class="roar">
+    Roar
+  </div>
+  <div class="acoustic">
+    Acoustic of <br> strength
+  </div>
+  <div class="wait">
+    The long wait ends, raising the curtain for the most awaited return of the 3rd edition of TEDxIITPatna.
+  </div>
+  </div>
+  <div class="timer">
+
+  </div>
+</div>
+<div class="dabbado">
+  <dic class="gif">
+<IMG class="giffy" SRC="images/Gif.gif">
+  </div>
+</div>
+
+
+</div>
+
+    <!-- <div class="heroimageindex">
+
+
+     <p style="text-align:center">
+      <p class="herop m"><img src="images/herot0.png">
+        <p class="herop s" ><img src="images/herot3.png">
+          <p class="herop xs"><img src="images/herot4.png">
+
+
+
+  </p><img  class="hrimg" src="images/th1ed2.jpg"></p>
+
+
+
+
+</div>-->
+
+
+<!-- hero image carousel  start -->
+      <!-- <div
         class="slide-one-item home-slider owl-carousel"
-        style="background-image: url(images/bg.jpeg); background-repeat: no-repeat; background-size: cover;"
+        style="background-image: url(images/theme1min.png); background-repeat: no-repeat; background-size: cover; "
       >
 
           <div
@@ -158,21 +212,21 @@
                   </h5>
                   <br>
                   <br>
-                  <h5>
+                  <h5>  -->
                     <!-- <button class="btn btn-danger py-3 px-2" style="font-family: nunito sans">
                     <span style="color:white">
                       REGISTER NOW!
                     </span>
                   </button> -->
-                      </span>
-                  </h5>
+                      <!-- <!-- </span> -->
+                  <!-- </h5>
                 </div>
               </div>
 
             </div>
           </div>
-        </div>
-
+        </div> -->
+<!-- hero image carousel end -->
 
   <!--   <div class="block-schedule overlay site-section">
       <div class="container" id="abt">
@@ -245,8 +299,81 @@
       </div>
     </div> -->
 
+    <div class="wrapper wmer1">
+      <div class="product-img">
 
-           <div class="block-schedule overlay site-section">
+        <img  class="mer1img"
+        src="images/920x400.png" >
+        <p class="mer2img" style="text-align: center"><img src="images/bkmerch1.jpg" ></p>
+
+      </div>
+      <div class="product-info mer1">
+        <div class="product-text">
+          <h1>TEDx Tees1</h1>
+          <h2>by IIT Patna</h2>
+          <p>Cost : ₹100<br> Delivery Charges : ₹50<br> Quality specs : __________<br> Sizes Available: XS M L  </p>
+        </div>
+        <div class="product-price-btn">
+
+          <button class="btn btn-danger py-2 px-2 bmerch" style="font-family: "icomoon"; font-size: 1,1rem;" ><a href="#">Buy Now</a></button>
+
+        </div>
+      </div>
+    </div>
+    <div class="wmer2">
+
+    <div class="product-info mer2">
+      <div class="product-text">
+        <h1>TEDx Tees2</h1>
+        <h2>by IIT Patna</h2>
+        <p>Cost : ₹100 Delivery Charges : ₹50 Quality specs : __________  Sizes Available: XS M L  </p>
+      </div>
+      <div class="product-price-btn btnmerch2">
+
+        <button class="btn btn-danger py-2 px-2 bmerch " style="font-family: "icomoon"; font-size: 1,1rem;" ><a href="#">Buy Now</a></button>
+
+      </div>
+    </div>
+
+
+
+  </div>
+  <div class="wmer3">
+
+    <div class="product-info mer3">
+      <div class="product-text">
+        <h1>TEDx Tees3</h1>
+        <h2>by IIT Patna</h2>
+        <p>Cost : ₹100<br>
+          Delivery Charges : ₹50 <br>
+          Quality specs : __________ <br>
+          Sizes Available: XS M L  </p>
+      </div>
+      <div class="product-price-btn">
+
+        <button class="btn btn-danger py-2 px-2 bmerch bmerch" style="font-family: "icomoon"; font-size: 1,1rem;" ><a href="#">Buy Now</a></button>
+
+      </div>
+    </div>
+
+
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br>
+  </div>
+<br>
+<br>
+
+
+
+
+
+
+
+
+
+
+           <div class="block-schedule overlay site-section" style="margin-top: -50px;">
+
         <div class="container " id="abt">
 
           <!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
@@ -262,13 +389,20 @@
               </div>
             </div>
           </div> -->
+
+
           <div class="heading-with-border ">
             <h2 class="heading text-uppercase" style="font-size: 30px">
               <strong><div class="prevspons">
 
                 <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
-                Our Previous Sponsors</strong>
-              </div>
+                Our Previous Sponsors
+              </div></strong>
+                <!-- <strong>
+                  <div class="ps2">Our Previous Sponsors</div>
+                </strong> -->
+
+
               </h2><br>
           </div>
           <div class="marquee1">
@@ -473,7 +607,7 @@
             >
               <div class="container mainc">
                 <div class="row  align-items-center ">
-                  <div class="col-md-12 col-lg-7 mb-7 mb-lg-0">
+                  <div class="col-md-12 col-lg-11 mb-7 mb-lg-0">
                     <br />
                     <h2 class="mb-3 con">
                       <!-- About -->
@@ -514,14 +648,14 @@
                       >
                     </p>
                   </div>
-                  <div class="col-md-12 col-lg-4 ml-auto ">
+                  <!-- <div class="col-md-12 col-lg-4 ml-auto ">
                     <div class="fb-embed">
                       <div class="likeusfb text-align-left">
                         <strong>Like Us On Facebook</strong>
                       </div>
 
-                    </div>
-                    <iframe
+                    </div> -->
+                    <!-- <iframe
                       src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Ftedxiitpatna&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
                       width="100%"
                       height="500"
@@ -530,7 +664,7 @@
                      frameborder="0"
                       allowTransparency="true"
                       allow="encrypted-media"
-                    ></iframe>
+                    ></iframe> -->
                   </div>
 
                 </div>
@@ -782,8 +916,8 @@
       </div>
     </div> -->
 
-    <!--Theme of TEDx-->
-        <!-- <div
+    <!-- Theme of TEDx-->
+      <!-- <div
         class="heading text-center"
         style="background:#000;"
       >
@@ -798,20 +932,17 @@
 
                 <br/>
 
-                <span>
-                <span style="font-size:80px"><strong>THEME</strong></span>
+                <span> -->
+                <!-- <span style="font-size:80px"><strong>THEME</strong></span> -->
+                 <!-- <br/>
                 <br/>
-                <br/>
-                Heraclitus, the Greek philosopher, once said and rightly said, 'Change is the only constant'. The only inevitable. Permanence is an illusion and everything lives in a process of constant change. Change, want it or not, has encroached and will encroach into each one of life's aspects. Be it nature's transitions from one season to another or the transformation of a caterpillar to a beautiful butterfly or the evolution of the man from apes, everything in this universe is susceptible to change. This simple yet deep concept of change, if usurped into life, can create great differences. The same applies to the various pains in life that man is agonised with. The darkness today will have to change into the brightest light tomorrow. The gloom surrounding today is also in the process of changing into most joyous glee tomorrow.
-                Presenting to you the theme of 2nd edition of TEDxIITPatna. "Metamorphosis".
-                The idea is to hear from the experts themselves on how change has affected today's technology, entertainment and most importantly, the people and the society.
 
               </span></div>
 
             </div>
           </div>
         </div>
-      </div> -->
+      </div>  -->
 
 <!-- TEam section  -->
 
