--- a/spk.html
+++ b/spk.html
@@ -252,7 +252,7 @@
               Director of Education for UXPA International.
             </p>
             <p>
-              <a href="linkedin.com/in/dwhood" target="_blank" style="font-size: 20px;"><i class="fas fa-globe"></i></a>
+              <a href="https://www.linkedin.com/in/dwhood/" target="_blank" style="font-size: 20px;"><i class="fas fa-globe"></i></a>
             </p>
           </div>
 
@@ -277,7 +277,7 @@
 
             </p>
             <p>
-              <a href="linkedin.com/in/raggarwal1" target="_blank" style="font-size: 20px;"><i
+              <a href="https://www.linkedin.com/in/raggarwal1/" target="_blank" style="font-size: 20px;"><i
                   class="fas fa-globe"></i></a>
             </p>
           </div>
@@ -312,7 +312,7 @@
 
             </p>
             <p>
-              <a href="linkedin.com/in/dwhood" target="_blank" style="font-size: 20px;"><i class="fas fa-globe"></i></a>
+              <a href="https://www.linkedin.com/in/tftl/" target="_blank" style="font-size: 20px;"><i class="fas fa-globe"></i></a>
             </p>
           </div>
 
