--- a/spk.html
+++ b/spk.html
@@ -252,7 +252,8 @@
               Director of Education for UXPA International.
             </p>
             <p>
-              <a href="https://www.linkedin.com/in/dwhood/" target="_blank" style="font-size: 20px;"><i class="fas fa-globe"></i></a>
+              <a href="https://www.linkedin.com/in/dwhood/" target="_blank" style="font-size: 20px;"><i
+                  class="fas fa-globe"></i></a>
             </p>
           </div>
 
@@ -312,49 +313,46 @@
 
             </p>
             <p>
-              <a href="https://www.linkedin.com/in/tftl/" target="_blank" style="font-size: 20px;"><i class="fas fa-globe"></i></a>
+              <a href="https://www.linkedin.com/in/tftl/" target="_blank" style="font-size: 20px;"><i
+                  class="fas fa-globe"></i></a>
             </p>
           </div>
 
         </div>
 
+        <div class="oddbox">
+          <div class="text" style="flex: 260%;">
+            <h1 class="mb-3" style="margin-top: 20px;font-size: 43px;font-weight: 600;">
+              Vivek Ram, Vaanarsena
+            </h1>
+            <h3><i>CG and VFX Artist</i></h3>
+            <br>
+            <p>
+              Vivek Ram, also known as The Senapati of Vaanarsena Studios, has had a career span of 20 years as a CG and
+              VFX Artist. He is responsible for building high quality character and environment models as modeling
+              technical director for international feature
+              films like Superman Returns, Fast and the Furious - Tokyo Drift, Night at the
+              Museum, The Incredible Hulk and many more. His incredible interest in ancient
+              Indian stories led him to his new venture, Vaanarsena Studios. He believes that
+              Indian mythology is very open to interpretation and his artwork has been successful in giving new
+              dimensions to the stories that we have been hearing
+              for ages.
 
 
-        <!-- <div class="spkbox mb-5">
-          <div class="row">
-
-            <div class="col-md-7 description">
-              <div class="container">
-                <h1 class="mb-3" style="margin-top: 20px;">Shams Aalam</h1>
-                <p>
-                  Shams Aalam is a true exemplification of the fact that the size of one’s success is measured by the
-                  strength of their desire. He is a paraplegic person, who has overcome all odds to become the world
-                  record holder for longest open sea swimming by a paraplegic person.
-                </p>
-                <p>
-                  He completed his B.E. in Mechanical Engineering & MBA in HR & Operations . Being an international gold
-                  medallist para swimmer, he was awarded best emerging leader in disability sports & sports diplomacy by
-                  U.S. Department of State Global Sports Mentoring Program 2018. His endowment to never let his
-                  impairment encompass him and control his life has been truly empowering and he has emerged to be an
-                  Influencer in the society. People not only get inspired but also motivated by seeing and listening to
-                  his extraordinary life story.
-                </p>
-                <p>
-                  <a href="https://www.facebook.com/IamShamsAalam/" class="p-2" target="_blank"><span
-                      class="icon-facebook"></span></a>
-                  <a href="https://twitter.com/IamShamsAalam" class="p-2" target="_blank"><span
-                      class="icon-twitter"></span></a>
-                  <a href="https://www.instagram.com/iamshamsaalam/" class="p-2" target="_blank"><span
-                      class="icon-instagram"></span></a>
-                  <a href="" style="font-size: 20px;"><i class="fas fa-globe"></i></a>
-                </p>
-              </div>
-            </div>
-            <div class="col-md-5">
-              <img src="./images/sa.jpg" class="spk-img">
-            </div>
+            </p>
+            <p>
+              <a href="https://instagram.com/vaanarsenastudios?utm_medium=copy_link" target="_blank" style="font-size: 20px;"><i
+                  class="fas fa-globe"></i></a>
+            </p>
           </div>
-        </div> -->
+          <div class="spkimg">
+            <img src="./images/speaker/vivek-2.png" class="spk-img">
+          </div>
+        </div>
+
+
+
+
         <!--  <div class="spkbox mb-5">
            <div class="row">
              <div class="col-md-5">
