--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 </head>
 
-<body style="background: #F1EEEE;">
+<body style="background: white;">
   <div id="fb-root"></div>
   <script>
     (function (d, s, id) {
