--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
   </div>
 </div>
 <div class="dabbado">
-  <dic class="gif">
+  <div class="gif">
 <IMG class="giffy" SRC="images/Gif.gif">
   </div>
 </div>
