--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 </div>
 <div class="dabbado">
-  <dic class="gif">
+  <div class="gif">
 <IMG class="giffy" SRC="images/Gif.gif">
   </div>
 </div>
