--- a/spk.html
+++ b/spk.html
@@ -341,8 +341,8 @@
 
             </p>
             <p>
-              <a href="https://instagram.com/vaanarsenastudios?utm_medium=copy_link" target="_blank" style="font-size: 20px;"><i
-                  class="fas fa-globe"></i></a>
+              <a href="https://instagram.com/vaanarsenastudios?utm_medium=copy_link" target="_blank"
+                style="font-size: 20px;"><i class="fas fa-globe"></i></a>
             </p>
           </div>
           <div class="spkimg">
@@ -350,6 +350,87 @@
           </div>
         </div>
 
+        <div class="evenbox">
+          <div class="spkimg">
+            <img src="./images/speaker/yusra-dev.png" class="spk-img">
+          </div>
+          <div class="text" style="flex: 260%;">
+            <h1 class="mb-3" style="margin-top: 20px;font-size: 43px;font-weight: 600;">
+              Yusra Mardini</h1>
+            <h3><i>Swimmer, Olympian</i></h3>
+            <br>
+            <p>
+              Yusra Mardini is an Olympic swimmer currently living in Hamburg, Germany. She was born in Syria in 1988.
+              She competed in the 2016 Rio Olympics and Tokyo Olympics 2020 under the Olympics flag, as a member of the
+              Refugee Olympic Athletes Team.Yusra previously represented Syria in international competitions. She
+              resumed her training after moving to Berlin in 2015 and qualified for Olympics in 2016,being one of the
+              ten athletes selected for the Refugee Olympic Team. In April 2017, Yusra (19 y/o) was appointed as a
+              Goodwill Ambassador for UNHCR, the UN Refugee Agency. She advocates for refugees globally through sharing
+              her own inspiring story and has become a powerful voice for the forcibly displaced across the world.
+
+
+            </p>
+            <p>
+              <a href="https://www.instagram.com/yusramardini/?hl=en" target="_blank" style="font-size: 20px;"><i
+                  class="fas fa-globe"></i></a>
+            </p>
+          </div>
+
+        </div>
+
+        <div class="oddbox">
+          <div class="text" style="flex: 260%;">
+            <h1 class="mb-3" style="margin-top: 20px;font-size: 43px;font-weight: 600;">
+              Rupesh Mahore
+            </h1>
+            <h3><i>Researcher & Innovator </i></h3>
+            <br>
+            <p>
+              Rupesh Mahore is currently working as a remote research intern at Harvard University with his study being
+              focussed on Molecular Dynamics Simulations. He has also worked with Indian Space Research Organization
+              (ISRO) during the Chandrayaan 2 mission. He has also worked with Padma Shri awarded Prof HC Verma in his
+              project: Shiksha Sopan at IIT Kanpur.He has also invented an oxygen conservation, optimisation, and
+              monitoring device: Oxyserve for COVID-19 patients which could save lives of millions of people suffering
+              from COPDs. Rupesh has also been selected for the prestigious CERN - Entrepreneurship Program 2021.
+
+
+            </p>
+            <p>
+              <a href="https://instagram.com/rumcohol?utm_medium=copy_link" target="_blank" style="font-size: 20px;"><i
+                  class="fas fa-globe"></i></a>
+            </p>
+          </div>
+          <div class="spkimg">
+            <img src="./images/speaker/rupesh-dev.png" class="spk-img">
+          </div>
+        </div>
+
+        <div class="evenbox">
+          <div class="spkimg">
+            <img src="./images/speaker/zoya-dev.png" class="spk-img">
+          </div>
+          <div class="text" style="flex: 270%;padding-left: 20px;">
+            <h1 class="mb-3" style="margin-top: 20px;font-size: 43px;font-weight: 600;">
+              Captain Zoya Agarwal</h1>
+            <h3><i>Aircraft Pilot, UN Spokesperson, TEDx Speaker</i></h3>
+            <br>
+            <p>
+              Captain Zoya Agarwal is an Indian commercial pilot flying for Air India. She commanded the all-women
+              cockpit crew that scripted aviation history in January 2021 by operating the longest non-stop commercial
+              flight by any airline to India, flying from San Francisco to Bengaluru. In the year 2013, She became the
+              youngest female pilot to fly a Boeing 777. She is also a TEDx speaker and aims to inspire young and
+              aspiring female pilots and youth by motivating them on various platforms. In August 2021, she was chosen
+              by the United Nations as its spokesperson for Generation Equality.
+
+
+            </p>
+            <p>
+              <a href="https://captainzoya.com/" target="_blank" style="font-size: 20px;"><i
+                  class="fas fa-globe"></i></a>
+            </p>
+          </div>
+
+        </div>
 
 
 
