--- a/index.html
+++ b/index.html
@@ -143,11 +143,12 @@
 <div class="dodabba">
 <div class="dabbaek">
   <div class="dabbaekek">
+    <!-- <div class="ekek"> -->
   <div class="roar">
     Roar
   </div>
   <div class="acoustic">
-    Acoustic of <br> strength
+    Acoustic of strength
   </div>
   <div class="wait">
     The long wait ends, raising the curtain for the most awaited return of the 3rd edition of TEDxIITPatna.
@@ -155,14 +156,12 @@
   </div>
   <div class="timer">
     <p id="demo"></p>
-
   </div>
-
 
 </div>
 <div class="dabbado">
   <div class="gif">
-<IMG class="giffy" SRC="images/Gif.gif">
+<img class="giffy" src="images/Gif.gif">
   </div>
 </div>
 
