--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 </head>
 
-<body style="background: #F1EEEE;">
+<body style="background: white;">
   <div id="fb-root"></div>
   <script>
     (function (d, s, id) {
@@ -161,7 +161,8 @@
 </div>
 <div class="dabbado">
   <div class="gif">
-<img class="giffy" src="images/Gif.gif">
+<img class="giffy" src="images/bg1.png">
+<img class="mob" src="images/th1ed2.jpg">
   </div>
 </div>
 
@@ -311,13 +312,19 @@
       </div>
       <div class="product-info mer1">
         <div class="product-text">
-          <h1>TEDx Tees1</h1>
+          <h1>TEDx Tees</h1>
           <h2>by IIT Patna</h2>
-          <p>Cost : ₹100<br> Delivery Charges : ₹50<br> Quality specs : __________<br> Sizes Available: XS M L  </p>
+          <p><b>Cost:</b> ₹350<br> <b>Type:</b> 100% Combed Cotton<br> <b>Fabric weight:</b> GSM 180<br><b>Sizes:</b>  XS S M L XL XXL
+            <br><b>Special Offer:</b> Buy 2 for ₹650</p>
         </div>
         <div class="product-price-btn">
 
-          <button class="btn btn-danger py-2 px-2 bmerch" style="font-family: "icomoon"; font-size: 1,1rem;" ><a href="#">Buy Now</a></button>
+
+          <button class="btn btn-danger py-2 px-2 bmerch" style="font-family: icomoon"; font-size: 1,1rem;" ><a href="#">Buy Now</a></button>
+
+
+
+
 
         </div>
       </div>
@@ -327,17 +334,25 @@
     <div class="product-info mer2">
       <div class="product-text">
         <h1>TEDx Tees2</h1>
-        <h2>by IIT Patna</h2>
-        <p>Cost : ₹100 Delivery Charges : ₹50 Quality specs : __________  Sizes Available: XS M L  </p>
+        <h2>by IIT Patna</h2><br>
+        <p><b>Cost:</b> ₹350<br> <b>Type:</b> 100% Combed Cotton<br> <b>Fabric weight:</b> GSM 180<br><b>Sizes:</b>  XS S M L XL XXL
+          <br><b>Special Offer:</b> Buy 2 for ₹650</p>
       </div>
       <div class="product-price-btn btnmerch2">
 
-        <button class="btn btn-danger py-2 px-2 bmerch " style="font-family: "icomoon"; font-size: 1,1rem;" ><a href="#">Buy Now</a></button>
+
+
+        <button class="btn btn-danger py-2 px-2 bmerch " style="font-family: icomoon"; font-size: 1,1rem;" ><a href="#">Buy Now</a></button>
+
+
 
       </div>
+
     </div>
 
 
+
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
   </div>
   <div class="wmer3">
@@ -346,14 +361,16 @@
       <div class="product-text">
         <h1>TEDx Tees3</h1>
         <h2>by IIT Patna</h2>
-        <p>Cost : ₹100<br>
-          Delivery Charges : ₹50 <br>
-          Quality specs : __________ <br>
-          Sizes Available: XS M L  </p>
+        <p><b>Cost:</b> ₹350<br> <b>Type:</b> 100% Combed Cotton<br> <b>Fabric weight:</b> GSM 180<br><b>Sizes:</b>  XS S M L XL XXL
+          <br><b>Special Offer:</b> Buy 2 for ₹650</p>
       </div>
       <div class="product-price-btn">
 
-        <button class="btn btn-danger py-2 px-2 bmerch bmerch" style="font-family: "icomoon"; font-size: 1,1rem;" ><a href="#">Buy Now</a></button>
+
+
+        <button class="btn btn-danger py-2 px-2 bmerch bmerch" style="font-family: icomoon"; font-size: 1,1rem;" ><a href="#">Buy Now</a></button>
+
+
 
       </div>
     </div>
