--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
         <div class="product-price-btn">
 
 
-          <button class="btn btn-danger py-2 px-2 bmerch" style="font-family: icomoon"; font-size: 1,1rem;" ><a href="#">Buy Now</a></button>
+          <button class="btn btn-danger py-2 px-2 bmerch"; font-size: 1,1rem;" ><a href="#">Buy Now</a></button>
 
 
 
@@ -342,7 +342,7 @@
 
 
 
-        <button class="btn btn-danger py-2 px-2 bmerch " style="font-family: icomoon"; font-size: 1,1rem;" ><a href="#">Buy Now</a></button>
+        <button class="btn btn-danger py-2 px-2 bmerch " ; font-size: 1,1rem;" ><a href="#">Buy Now</a></button>
 
 
 
@@ -368,7 +368,7 @@
 
 
 
-        <button class="btn btn-danger py-2 px-2 bmerch bmerch" style="font-family: icomoon"; font-size: 1,1rem;" ><a href="#">Buy Now</a></button>
+        <button class="btn btn-danger py-2 px-2 bmerch bmerch" ; font-size: 1,1rem;" ><a href="#">Buy Now</a></button>
 
 
 
