--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:url" content="https://www.tedxiitpatna.com/">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700,900|Roboto+Mono:300,400,500" />
-    <!-- <link rel="stylesheet" href="fonts/icomoon/style.css" /> -->
+    <link rel="stylesheet" href="fonts/icomoon/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Bentham|Playfair+Display|Raleway:400,500|Suranna|Trocchi" rel="stylesheet">
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/owl.carousel.min.css" />
@@ -87,7 +87,7 @@
              <div class="row align-items-center">
                <div class="col-2">
                  <h2 class="mb-0 site-logo">
-                   <a href="index.html"><img class="logo" style="width: 330px;" src="Logos/White linear.png"></a>
+                   <a href="index.html"><img class="logo" style="width: 330px;" src="Logos/White linear.png"/></a>
                  </h2>
                </div>
                <div class="col-10">
@@ -99,7 +99,8 @@
                        <a
                          href="#"
                          class="site-menu-toggle js-menu-toggle text-white-opacity-5"
-                         ><span class="icon-menu h3"></span
+                         ><span class="icon-menu h3">
+                           </span
                        ></a>
                      </div>
                      <ul class="site-menu js-clone-nav d-none d-lg-block">
@@ -140,34 +141,36 @@
 
      </div>
 
-<div class="dodabba">
-<div class="dabbaek">
-  <div class="dabbaekek">
-    <!-- <div class="ekek"> -->
-  <div class="roar">
-    Roar
-  </div>
-  <div class="acoustic">
-    Acoustic of strength
-  </div>
-  <div class="wait">
-    The long wait ends, raising the curtain for the most awaited return of the 3rd edition of TEDxIITPatna.
-  </div>
-  </div>
-  <div class="timer">
-    <p id="demo"></p>
-  </div>
+     <div class="dodabba">
+     <div class="dabbaek">
+       <div class="dabbaekek">
+         <!-- <div class="ekek"> -->
+       <div class="roar">
+         Roar
+       </div>
+       <div class="acoustic">
+         Acoustic of strength
+       </div>
+       <div class="wait">
+         The long wait ends, raising the curtain for the most awaited return of the 3rd edition of TEDxIITPatna.
+       </div>
+       </div>
+       <div class="timer2">
+         <p>Going live in</p>
+       </div>
+       <div class="timer">
+         <p id="demo"></p>
+       </div>
 
-</div>
-<div class="dabbado">
-  <div class="gif">
-<img class="giffy" src="images/bg1.png">
-<img class="mob" src="images/th1ed2.jpg">
-  </div>
-</div>
+     </div>
+     <div class="dabbado">
+       <div class="gif">
+     <img class="giffy" src="images/bg1.png">
+     <img class="mob" src="images/th1ed2.jpg">
+       </div>
+     </div>
 
-
-</div>
+     </div>
 
     <!-- <div class="heroimageindex">
 
@@ -320,7 +323,7 @@
         <div class="product-price-btn">
 
 
-          <button class="btn btn-danger py-2 px-2 bmerch"; font-size: 1,1rem;" ><a href="#">Buy Now</a></button>
+          <button class="btn btn-danger py-2 px-2 bmerch" style= font-size: 1,1rem;" ><a href="#">Buy Now</a></button>
 
 
 
@@ -342,7 +345,7 @@
 
 
 
-        <button class="btn btn-danger py-2 px-2 bmerch " ; font-size: 1,1rem;" ><a href="#">Buy Now</a></button>
+        <button class="btn btn-danger py-2 px-2 bmerch " style="font-family: icomoon"; font-size: 1,1rem;" ><a href="#">Buy Now</a></button>
 
 
 
@@ -368,7 +371,7 @@
 
 
 
-        <button class="btn btn-danger py-2 px-2 bmerch bmerch" ; font-size: 1,1rem;" ><a href="#">Buy Now</a></button>
+        <button class="btn btn-danger py-2 px-2 bmerch bmerch" style="font-family: icomoon"; font-size: 1,1rem;" ><a href="#">Buy Now</a></button>
 
 
 
