--- a/index.html
+++ b/index.html
@@ -1216,8 +1216,8 @@ var x = setInterval(function() {
   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
   // Output the result in an element with id="demo"
-  document.getElementById("demo").innerHTML = days + ": " + hours + ": "
-  + minutes + ": " + seconds;
+                document.getElementById("demo").innerHTML ="0"+ days +":"+ hours + ":"
+                    + minutes + ":" + seconds + "";
 
   // If the count down is over, write some text
   if (distance < 0) {
