--- a/index.html
+++ b/index.html
@@ -1263,10 +1263,10 @@ var x = setInterval(function() {
                     + minutes + ":" + seconds + "";
 
   // If the count down is over, write some text
-//   if (distance < 0) {
-//     clearInterval(x);
-//     document.getElementById("demo").innerHTML = "EXPIRED";
-//   }
+  if (distance < 0) {
+    clearInterval(x);
+    document.getElementById("demo").innerHTML = "WE ARE LIVE NOW!";
+  }
 }, 1000);
 </script>
 <script>
