--- a/index.html
+++ b/index.html
@@ -388,6 +388,8 @@
 <br>
 <br>
 
+<div class = "spks">
+<div class = "container ">
 <div class="heading-with-border ">
   <h2 class="heading text-uppercase" style="font-size: 30px">
     <strong><div class="prevspons">
@@ -403,7 +405,7 @@
     </h2><br>
 </div>
 
-<div class="w3-content w3-section" style="width:100%">
+<div class="w3-content w3-section" style="width:100%" >
   <div><img class="mySlides" src="images/speaker/rishi.png" style="width:100%" Dr. Rishi Raj Associate Professor - IIT Patna></div>
   <div><img class="mySlides" src="images/speaker/rupesh.png" style="width:100%" Vivek Ram, Vaanarsena CG and VFX Artist></div>
   <div><img class="mySlides" src="images/speaker/yusra.png" style="width:100%" Rupesh Mahore Researcher & Innovator></div>
@@ -412,7 +414,8 @@
   <div><img class="mySlides" src="images/speaker/rahul.png" style="width:100%" Rahul Aggarwal Founder at Mission Oxygen, Co-Founder - Designhill></div>
   <div><img class="mySlides" src="images/speaker/darren.png" style="width:100%"Darren Hood Principle UX Designer ></div>
 </div>
-
+</div>
+</div>
 
            <div class="block-schedule overlay site-section" style="margin-top: -50px;">
 
