--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
   <h2 class="heading text-uppercase" style="font-size: 30px">
     <strong><div class="prevspons">
 
-      <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
+      <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
       Speakers
     </div></strong>
       <!-- <strong>
